// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> deve renderizar o botão danger 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    danger={true}
    disabled={false}
    info={false}
    lg={false}
    outlined={false}
    primary={false}
    secundary={false}
    sm={false}
    success={false}
    warning={false}
  >
    Perigo
  </Button>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": "Perigo",
      "className": "n-btn n-btn-danger",
      "disabled": false,
      "secundary": false,
    },
    "ref": null,
    "rendered": "Perigo",
    "type": "button",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "Perigo",
        "className": "n-btn n-btn-danger",
        "disabled": false,
        "secundary": false,
      },
      "ref": null,
      "rendered": "Perigo",
      "type": "button",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<Button /> deve renderizar o botão default 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    danger={false}
    disabled={false}
    info={false}
    lg={false}
    outlined={false}
    primary={false}
    secundary={false}
    sm={false}
    success={false}
    warning={false}
  >
    Padrão
  </Button>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": "Padrão",
      "className": "n-btn",
      "disabled": false,
      "secundary": false,
    },
    "ref": null,
    "rendered": "Padrão",
    "type": "button",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "Padrão",
        "className": "n-btn",
        "disabled": false,
        "secundary": false,
      },
      "ref": null,
      "rendered": "Padrão",
      "type": "button",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<Button /> deve renderizar o botão disabled 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    danger={false}
    disabled={true}
    info={false}
    lg={false}
    outlined={false}
    primary={false}
    secundary={false}
    sm={false}
    success={false}
    warning={false}
  >
    Desabilitado
  </Button>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": "Desabilitado",
      "className": "n-btn n-btn-disabled",
      "disabled": true,
      "secundary": false,
    },
    "ref": null,
    "rendered": "Desabilitado",
    "type": "button",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "Desabilitado",
        "className": "n-btn n-btn-disabled",
        "disabled": true,
        "secundary": false,
      },
      "ref": null,
      "rendered": "Desabilitado",
      "type": "button",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<Button /> deve renderizar o botão info 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    danger={false}
    disabled={false}
    info={true}
    lg={false}
    outlined={false}
    primary={false}
    secundary={false}
    sm={false}
    success={false}
    warning={false}
  >
    Informações
  </Button>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": "Informações",
      "className": "n-btn n-btn-info",
      "disabled": false,
      "secundary": false,
    },
    "ref": null,
    "rendered": "Informações",
    "type": "button",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "Informações",
        "className": "n-btn n-btn-info",
        "disabled": false,
        "secundary": false,
      },
      "ref": null,
      "rendered": "Informações",
      "type": "button",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<Button /> deve renderizar o botão primary 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    danger={false}
    disabled={false}
    info={false}
    lg={false}
    outlined={false}
    primary={true}
    secundary={false}
    sm={false}
    success={false}
    warning={false}
  >
    Primário
  </Button>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": "Primário",
      "className": "n-btn n-btn-primary",
      "disabled": false,
      "secundary": false,
    },
    "ref": null,
    "rendered": "Primário",
    "type": "button",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "Primário",
        "className": "n-btn n-btn-primary",
        "disabled": false,
        "secundary": false,
      },
      "ref": null,
      "rendered": "Primário",
      "type": "button",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<Button /> deve renderizar o botão secundary 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    danger={false}
    disabled={false}
    info={false}
    lg={false}
    outlined={false}
    primary={false}
    secondary={true}
    secundary={false}
    sm={false}
    success={false}
    warning={false}
  >
    Secundário
  </Button>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": "Secundário",
      "className": "n-btn n-btn-secondary",
      "disabled": false,
      "secundary": false,
    },
    "ref": null,
    "rendered": "Secundário",
    "type": "button",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "Secundário",
        "className": "n-btn n-btn-secondary",
        "disabled": false,
        "secundary": false,
      },
      "ref": null,
      "rendered": "Secundário",
      "type": "button",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<Button /> deve renderizar o botão success 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    danger={false}
    disabled={false}
    info={false}
    lg={false}
    outlined={false}
    primary={false}
    secundary={false}
    sm={false}
    success={true}
    warning={false}
  >
    Sucesso
  </Button>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": "Sucesso",
      "className": "n-btn n-btn-success",
      "disabled": false,
      "secundary": false,
    },
    "ref": null,
    "rendered": "Sucesso",
    "type": "button",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "Sucesso",
        "className": "n-btn n-btn-success",
        "disabled": false,
        "secundary": false,
      },
      "ref": null,
      "rendered": "Sucesso",
      "type": "button",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<Button /> deve renderizar o botão warning 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    danger={false}
    disabled={false}
    info={false}
    lg={false}
    outlined={false}
    primary={false}
    secundary={false}
    sm={false}
    success={false}
    warning={true}
  >
    Alerta
  </Button>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": "Alerta",
      "className": "n-btn n-btn-warning",
      "disabled": false,
      "secundary": false,
    },
    "ref": null,
    "rendered": "Alerta",
    "type": "button",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "Alerta",
        "className": "n-btn n-btn-warning",
        "disabled": false,
        "secundary": false,
      },
      "ref": null,
      "rendered": "Alerta",
      "type": "button",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
